--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
+    "font-awesome": "^4.7.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
@@ -39,6 +42,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
