--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "font-awesome": "^4.7.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
